/*
	Copyright The containerd Authors.

	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at

		http://www.apache.org/licenses/LICENSE-2.0

	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
*/

syntax = "proto3";

package containerd.services.mountmanager.v1;

import "google/protobuf/any.proto";

option go_package = "github.com/containerd/containerd/api/services/mountmanager/v1;mountmanager";

service MountManager {
  rpc Mount(MountRequest) returns (MountResponse);
  rpc Unmount(UnmountRequest) returns (UnmountResponse);
}

message MountRequest {
  string plugin_name = 1;
  google.protobuf.Any data = 2;
}

message MountResponse {
  string plugin_name = 1;
  google.protobuf.Any data = 2;
}

message UnmountRequest {
  string plugin_name = 1;
  google.protobuf.Any data = 2;
}

message UnmountResponse {
  string plugin_name = 1;
  google.protobuf.Any data = 2;
}
